compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_imported_module_with_alias_warnings_test.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: import gleam/foo as bar
---
warning: Unused imported module
  ┌─ /src/warning/wrn.gleam:1:1
  │
1 │ import gleam/foo as bar
  │ ^^^^^^^^^^^^^^^^^^^^^^^ This imported module is never used

Hint: You can safely remove it.
