compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_module_not_marked_as_used_by_discard_aliased_import_with_same_name.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n            import wibble/wobble\n            import wobble.{two} as _wobble\n            pub fn main() { two }\n        "
---
----- SOURCE CODE
-- wibble/wobble.gleam
pub const one = 1

-- wobble.gleam
pub const two = 2

-- main.gleam

            import wibble/wobble
            import wobble.{two} as _wobble
            pub fn main() { two }
        

----- WARNING
warning: Unused imported module
  ┌─ /src/warning/wrn.gleam:2:13
  │
2 │             import wibble/wobble
  │             ^^^^^^^^^^^^^^^^^^^^ This imported module is never used

Hint: You can safely remove it.
