compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_module_select_function.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\nimport wibble\n\npub fn main() {\n  wibble.println\n  1\n}\n"
---
----- SOURCE CODE

import wibble

pub fn main() {
  wibble.println
  1
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.gleam:5:9
  │
5 │   wibble.println
  │         ^^^^^^^^ This value is never used
